# sonotheia-enhanced

./: .env.example  .gitattributes  .gitignore  AGENTS.md  API.md  BENCHMARK_RESULTS_2025-12-10.md  BENCHMARK_VALIDATION_GUIDE.md  BUG_FIXES_2025-12-09.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DETECTION_IMPROVEMENT_PLAN.md  ENHANCEMENTS_TO_APPLY.md  FUSION_FIXES_ANALYSIS.md  HF_ENSEMBLE_MODE_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INCODE_INTEGRATION_GUIDE.md  INCODE_SHOWCASE_GUIDE.md  INTEGRATION.md  LOCAL_BENCHMARK_INSTRUCTIONS.md  MODULE_STATUS_FRAGMENT.md  MVP_SUMMARY.md  QUICKSTART.md  QUICKSTART_BRANCH_PROTECTION.md  QUICK_VALIDATION_STEPS.md  README.md  README_MODULE_CONTROL.md  REUSABLE_CODE_CATALOG.md  ROADMAP.md  RUN_LOCAL_BENCHMARK.sh  SECURITY_AUDIT_API_KEYS.md  SECURITY_SUMMARY.md  STATUS.md  Sonotheia Multi-Factor Voice Authentication & SAR.md  USAGE_GUIDE.md  calibrate.sh  data_factory.py  debug_serialization.py  (+26 more)
backend/: .dockerignore  =2.0.0  Dockerfile  MVP_README.md  __init__.py  calibration_results_20251124_175133.json  celery_app.py  celery_config.py  pyproject.toml  requirements-celery.txt  requirements-minimal.txt  requirements.txt
backend/api/: aitheia_router.py  analyze_call.py  audit_logging.py  badge_router.py  dependencies.py  detection_router.py  escalation.py  factory_router.py  jobs.py  library_router.py  main.py  middleware.py  session_management.py  transcription_router.py  validation.py
backend/authentication/: device_factor.py  mfa_orchestrator.py  unified_orchestrator.py  voice_factor.py
backend/calibration/: __init__.py  baseline_test.py  environment.py  optimizer.py
backend/config/: constants.py  settings.yaml
backend/core/: __init__.py  module_registry.py  profiles.py
backend/data/: red_team_prompts.txt
backend/data_ingest/: loader.py
backend/detection/: __init__.py  config.py  pipeline.py
backend/evaluation/: codec_experiments.py  metrics.py
backend/features/: extraction.py
backend/models/: baseline.py
backend/observability/: __init__.py  metrics.py
backend/rate_limiting/: __init__.py  config.py  decorators.py  limiter.py  strategies.py
backend/risk_engine/: decision_logic.py  factors.py
backend/sar/: __init__.py  generator.py  huggingface_llm.py  models.py  pdf_generator.py
backend/scripts/: analyze_library.py  augment_organic.py  benchmark_config.yaml  benchmark_rawnet.py  calibrate_library.py  debug_config.py  debug_hf_api.py  eval_liveness.py  evaluate_fusion.py  evaluate_rawnet3.py  generate_accuracy_report.py  generate_benchmark_metadata.py  generate_phonetic_samples.py  generate_red_team.py  generate_test_data.py  human_annotate.py  ingest_asvspoof.py  ingest_commonvoice.py  ingest_librispeech.py  print_report.py  recalibrate_thresholds.py  run_benchmark.py  run_micro_test.py  test_pipeline.py  test_single_file.py  test_synthetic_batch.py  train_baseline.py  tts_utils.py  verify_accuracy_json.py
backend/sdk/: client.py
backend/sensors/: PROSODIC_CONTINUITY_CALIBRATION.md  PROSODIC_CONTINUITY_README.md  __init__.py  bandwidth.py  base.py  breath.py  breathing_pattern.py  calibrate_prosodic.py  coarticulation.py  digital_silence.py  dynamic_range.py  enf.py  example_calibration.sh  formant.py  formant_trajectory.py  fusion.py  global_formants.py  glottal_inertia.py  hf_deepfake.py  hf_ensemble.py  huggingface_detector.py  phase_coherence.py  pitch_velocity.py  prosodic_continuity.py  registry.py  two_mouth.py  utils.py  vad.py  vocal_tract.py
backend/sonotheia_rust/: Cargo.toml  README.md  (+2 more)
(+306 files in other folders)
