[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonotheia-core"
version = "0.1.0"
description = "Core detection engine for Sonotheia: Patent-safe deepfake audio detection."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Sonotheia Team", email = "dev@sonotheia.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]
ml = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0"
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]
