[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonotheia-backend"
version = "1.0.0"
description = "Sonotheia Enhanced Backend Core"
readme = "MVP_README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic~=2.5.0",
    "python-multipart>=0.0.9,<1.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "prometheus_client>=0.19.0",
    "numpy>=1.26.2,<2.0.0",
    "scipy>=1.11.4,<2.0.0",
    "librosa>=0.10.1,<1.0.0",
    "soundfile>=0.12.1,<1.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "celery[redis]>=5.3.0,<6.0",
    "redis>=4.5.0,<6.0",
    "pyyaml>=6.0.2,<7.0.0",
    "jinja2>=3.1.4",
    "pandas>=2.1.3,<3.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "black>=23.11.0,<25.0.0",
    "flake8>=6.1.0,<8.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]
viz = [
    "matplotlib>=3.8.2,<4.0.0",
    "plotly>=5.18.0,<6.0.0",
    "streamlit>=1.29.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "authentication*", "core*", "detection*", "sar*", "sensors*", "utils*"]
